--- a/overlays/mgmt/cluster-issuers.yaml
+++ b/overlays/mgmt/cluster-issuers.yaml
@@ -17,4 +17,4 @@ spec:
         cloudflare:
           apiTokenSecretRef:
             name: cloudflare-token
-            key: API_TOKEN
+            key: api-token
