--- a/overlays/test/external-secrets.yaml
+++ b/overlays/test/external-secrets.yaml
@@ -9,7 +9,7 @@ spec:
     name: cloudflare-token
     deletionPolicy: Delete
   data:
-    - secretKey: API_TOKEN
+    - secretKey: api-token
       remoteRef:
         key: cloudflare-api-token
       sourceRef:
