--- a/overlays/prod/external-secrets.yaml
+++ b/overlays/prod/external-secrets.yaml
@@ -4,6 +4,8 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: cloudflare-token
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   target:
     name: cloudflare-token
