--- a/resources/test/kustomization.yaml
+++ b/resources/test/kustomization.yaml
@@ -3,4 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: cert-manager
 resources:
-- ../../bases/v0.18.2
+- external-secrets.yaml
+- cluster-issuers.yaml
