--- a/overlays/prod/external-secrets.yaml
+++ b/overlays/prod/external-secrets.yaml
@@ -16,5 +16,5 @@ spec:
         key: cloudflare-api-token
       sourceRef:
         storeRef:
-          name: bitwarden
+          name: vault
           kind: ClusterSecretStore
