--- a/overlays/test/external-secrets.yaml
+++ b/overlays/test/external-secrets.yaml
@@ -7,14 +7,17 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "5"
 spec:
+  refreshInterval: "15m"
+  secretStoreRef:
+    name: vault
+    kind: ClusterSecretStore
   target:
     name: cloudflare-token
-    deletionPolicy: Delete
+    creationPolicy: Owner
+    deletionPolicy: Retain
   data:
     - secretKey: api-token
       remoteRef:
-        key: cloudflare-api-token
-      sourceRef:
-        storeRef:
-          name: vault
-          kind: ClusterSecretStore
+        key: cloudflare
+        property: api-token
+      
