correct externalsecret api ver

--- a/overlays/prod/external-secrets.yaml
+++ b/overlays/prod/external-secrets.yaml
@@ -1,20 +1,22 @@
 
 ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: cloudflare-token
   annotations:
     argocd.argoproj.io/sync-wave: "5"
 spec:
+  refreshInterval: "15m"
+  secretStoreRef:
+    name: vault
+    kind: ClusterSecretStore
   target:
     name: cloudflare-token
-    deletionPolicy: Delete
+    creationPolicy: Owner
+    deletionPolicy: Retain
   data:
     - secretKey: api-token
       remoteRef:
-        key: cloudflare-api-token
-      sourceRef:
-        storeRef:
-          name: vault
-          kind: ClusterSecretStore
+        key: cloudflare
+        property: api-token
