make argo diff happy

--- a/overlays/prod/external-secrets.yaml
+++ b/overlays/prod/external-secrets.yaml
@@ -20,3 +20,7 @@ spec:
       remoteRef:
         key: cloudflare
         property: api-token
+        conversionStrategy: Default	
+        decodingStrategy: None	
+        metadataPolicy: None
+      
