--- a/overlays/prod/external-secrets.yaml
+++ b/overlays/prod/external-secrets.yaml
@@ -4,6 +4,7 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: cloudflare-token
+  namespace: cert-manager
   annotations:
     argocd.argoproj.io/sync-wave: "5"
 spec:
