--- a/overlays/test/kustomization.yaml
+++ b/overlays/test/kustomization.yaml
@@ -9,7 +9,7 @@ patches:
 - patch: |-
     - op: add
       path: /spec/template/spec/containers/0/args/-
-      value: "--enable-gateway-api "
+      value: --enable-gateway-api
   target:
     kind: Deployment
     group: apps
