set namespace on cloudflare-token secretGenerator to get name suffix appended to sealed secret name

--- a/overlays/mgmt/kustomization.yaml
+++ b/overlays/mgmt/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - cluster-issuers.yaml
 secretGenerator:
   - name: cloudflare-token
+    namespace: cert-manager
     files:
       - ./sealed-secrets.yaml
     options:
